--- a/Project/chat/templates/chat/index.html
+++ b/Project/chat/templates/chat/index.html
@@ -1,5 +1,6 @@
 {%extends 'chat/base.html'%}
 {%block content%}
+<meta charset="utf-8"/>
 What chat room would you like to enter?<br>
    <input id="room-name-input" type="text" size="100"><br>
    <input id="room-name-submit" type="button" value="Enter">
